add scripts for *unix